# TKOM-XML-to-JSON-translator

./: Atoms.h  Attribute.cpp  Attribute.h  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  JSArray.cpp  JSArray.h  JSNode.cpp  JSNode.h  JSObject.cpp  JSObject.h  JSPair.cpp  JSPair.h  JSValue.cpp  JSValue.h  JsonWriter.cpp  JsonWriter.h  Lexer.cpp  Lexer.h  LexerExceptions.cpp  LexerExceptions.h  Parser.cpp  Parser.h  ParserExceptions.cpp  ParserExceptions.h  Scanner.cpp  Scanner.h  Source.cpp  Source.h  Token.cpp  Token.h  Translator.cpp  Translator.h  XMLAttribute.cpp  XMLAttribute.h  XMLElement.cpp  XMLElement.h  XMLNode.cpp  XMLNode.h  (+3 more)
tests/: test.json
tests/LexerErrorTests/: endTagWrongFormat.xml  enitytyAposWrongFormat.xml  enitytyLtWrongFormat.xml  entityAmpWrongFormat.xml  entityGtWrongFormat.xml  entityQuotWrongFormat.xml  noEnitytyNameAfterAmp.xml  quotedTextWithSpaces.xml  wrongCDATA.xml  wrongCdataFormat2.xml  wrongCommentFormat.xml  wrongCommentFormat2.xml  wrongDoctype.xml  wrongPrologFormat.xml
tests/ParserErrorTests/: CDATAoutsideOfRootElement.xml  closeBody.xml  closebody2.xml  elementOpenBody.xml  elementOpenBody2.xml  elementStackNames.xml  noAttributeEqualTag.xml  noAttributeValue.xml  twoOpenBodyElements.xml  twoRootElements.xml  wrongEndingTagName.xml
tests/simpleTests/: PlantCatalogW3.xml  SameNodeNames2.xml  SameNodeNames3.xml  allCombined.xml  cdata.xml  cdataTextValueProcessing.xml  comments.xml  doctype.xml  emptyNodeWithArg.xml  entityProcessing.xml  miscelanusCombined.xml  mixedContent.xml  mixedContent2.xml  namespaces.xml  (+10 more)
